--- a/package.json
+++ b/package.json
@@ -1,27 +1,46 @@
 {
-  "name": "aeroport",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.2"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.2",
-    "@eslint/eslintrc": "^3"
-  }
+	"name": "aeroport",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"supabase": "supabase"
+	},
+	"dependencies": {
+		"@radix-ui/react-slot": "^1.2.2",
+		"@supabase/auth-helpers-nextjs": "^0.10.0",
+		"@supabase/ssr": "^0.5.2",
+		"@supabase/supabase-js": "^2.49.4",
+		"@tailwindcss/cli": "^4.1.7",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"ldrs": "^1.1.7",
+		"lucide": "^0.511.0",
+		"lucide-react": "^0.511.0",
+		"next": "15.3.2",
+		"next-themes": "^0.4.3",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"shadcn": "^2.5.0",
+		"supabase": "^2.22.12",
+		"tailwindcss-animate": "^1.0.7",
+		"tw-animate-css": "^1.3.0",
+		"typescript": "^5.7.2",
+		"zod": "^3.24.4"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"encoding": "^0.1.13",
+		"eslint": "^9",
+		"eslint-config-next": "15.3.2",
+		"tailwind-merge": "^2.6.0",
+		"tailwindcss": "^4.1.7",
+		"typescript": "^5.8.3"
+	}
 }
