--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
 		"supabase": "supabase"
 	},
 	"dependencies": {
-		"@radix-ui/react-slot": "^1.2.2",
+		"@hookform/resolvers": "^5.0.1",
+		"@radix-ui/react-dropdown-menu": "^2.1.15",
+		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-slot": "^1.2.3",
 		"@supabase/auth-helpers-nextjs": "^0.10.0",
 		"@supabase/ssr": "^0.5.2",
 		"@supabase/supabase-js": "^2.49.4",
@@ -23,11 +26,12 @@
 		"next-themes": "^0.4.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.56.4",
 		"shadcn": "^2.5.0",
 		"tailwindcss-animate": "^1.0.7",
 		"tw-animate-css": "^1.3.0",
 		"typescript": "^5.7.2",
-		"zod": "^3.24.4"
+		"zod": "^3.25.20"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
