--- a/package.json
+++ b/package.json
@@ -9,29 +9,45 @@
 		"supabase": "supabase"
 	},
 	"dependencies": {
-		"@hookform/resolvers": "^5.0.1",
+		"@hookform/resolvers": "^3.9.0",
+		"@radix-ui/react-alert-dialog": "^1.1.14",
+		"@radix-ui/react-avatar": "^1.1.10",
+		"@radix-ui/react-checkbox": "^1.3.2",
+		"@radix-ui/react-dialog": "^1.1.14",
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
 		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-popover": "^1.1.14",
+		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-switch": "^1.2.5",
+		"@radix-ui/react-tabs": "^1.1.12",
+		"@radix-ui/react-toast": "^1.2.14",
 		"@supabase/auth-helpers-nextjs": "^0.10.0",
 		"@supabase/ssr": "^0.5.2",
 		"@supabase/supabase-js": "^2.49.4",
 		"@tailwindcss/cli": "^4.1.7",
+		"@tanstack/react-table": "^8.21.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
+		"date-fns": "^3.6.0",
+		"input-otp": "^1.4.2",
 		"ldrs": "^1.1.7",
 		"lucide": "^0.511.0",
 		"lucide-react": "^0.511.0",
-		"next": "15.3.2",
+		"next": "15.2.4",
 		"next-themes": "^0.4.3",
 		"react": "^19.0.0",
+		"react-day-picker": "^8.10.1",
 		"react-dom": "^19.0.0",
-		"react-hook-form": "^7.56.4",
+		"react-hook-form": "^7.53.0",
 		"shadcn": "^2.5.0",
+		"sonner": "^2.0.3",
 		"tailwindcss-animate": "^1.0.7",
 		"tw-animate-css": "^1.3.0",
 		"typescript": "^5.7.2",
-		"zod": "^3.25.20"
+		"zod": "^3.23.8",
+		"zustand": "^5.0.5"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
