--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
 		"next": "15.2.4",
 		"next-themes": "^0.4.3",
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
 		"react-day-picker": "^8.10.1",
+		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.53.0",
 		"shadcn": "^2.5.0",
 		"sonner": "^2.0.3",
+		"sooner": "^1.1.4",
 		"tailwindcss-animate": "^1.0.7",
 		"tw-animate-css": "^1.3.0",
 		"typescript": "^5.7.2",
