--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
 		"@radix-ui/react-label": "^2.1.7",
 		"@radix-ui/react-popover": "^1.1.14",
+		"@radix-ui/react-scroll-area": "^1.2.9",
 		"@radix-ui/react-select": "^2.2.5",
 		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
@@ -36,6 +37,7 @@
 		"ldrs": "^1.1.7",
 		"lucide": "^0.511.0",
 		"lucide-react": "^0.511.0",
+		"motion": "^12.16.0",
 		"next": "15.2.4",
 		"next-themes": "^0.4.3",
 		"react": "^18.3.1",
